crates/dekaf/src/snapshots/dekaf__log_appender__tests__nested_spans.snap
---
source: crates/dekaf/src/log_appender.rs
expression: captured_logs
---
[
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests"
    },
    "level": "info",
    "message": "From before task name, should be visible",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests"
    },
    "level": "info",
    "message": "From inside nested span but before task_name, should be visible",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "nested",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests",
      "task_name": "my_task"
    },
    "level": "info",
    "message": "Log from nested span after task name marker",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests",
          "task_name": "my_task"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "nested",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests",
      "task_name": "my_task"
    },
    "level": "info",
    "message": "Back in session span after task name",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests",
          "task_name": "my_task"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  },
  {
    "_meta": {
      "uuid": "[uuid]"
    },
    "fields": {
      "module": "dekaf::log_appender::tests",
      "task_name": "my_task"
    },
    "level": "info",
    "message": "In child of session span after task name",
    "shard": {
      "keyBegin": "00000000",
      "kind": "materialization",
      "name": "my_task",
      "rClockBegin": "00000000"
    },
    "spans": [
      {
        "fields": {
          "module": "dekaf::log_appender::tests",
          "task_name": "my_task"
        },
        "level": "info",
        "message": "test_session",
        "ts": "[ts]"
      },
      {
        "fields": {
          "module": "dekaf::log_appender::tests"
        },
        "level": "info",
        "message": "new_nested",
        "ts": "[ts]"
      }
    ],
    "ts": "[ts]"
  }
]
